Add comprehensive tests for UrlDetector's URL normalization and extraction
- Implement tests to validate supported direct URL inputs and their normalization.
- Add tests for extracting URLs from realistic clipboard text scenarios.
- Include tests for rejecting unsupported, malformed, and ambiguous direct inputs.
- Ensure that extracted URLs are validated against the central validator.
- Test for preservation of order and deduplication of normalized candidates.
- Validate that deterministic random prose does not yield download candidates.
- Confirm that scheme handling is independent of the process locale.